# picotts

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
CMake/Modules/: FindGlib.cmake  FindLibnotify.cmake  LibFindMacros.cmake
data/: README.md
include/picotts/: cached_files_map.h  picotts_publisher.h  utils.h
launch/: test_picotts.launch
scripts/: ivona.bash  marytts_server.bash
src/: picotts.cpp  test_picotts.cpp  tts2notify.cpp
